# moodle-converter

./: .gitignore  Justfile  README.md  env.yml  setup.cfg
src/moodleconverter/: __init__.py  _version.py  converter.py
tests/: test_convert.py
