[metadata]
name = moodleconverter
version = attr: moodleconverter.__version__
description = Converter from pythonic calculations to moodle
author = npikall
# author_email = ...
long_description = file: README.md
# url = https://github.com/...
platforms = any
classifiers =
    Intended Audience :: Science/Research/Teaching

[options]
package_dir =
    = src
packages = find:
install_requires =
    nbformat

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov

# [options.entry_points]
# console_scripts =
#     render_sfinx_toc = eo_datascience.render_sfinx_toc:main